# Strikeedge

./: .env.example  .gitignore  CLAUDE_PROJECT_GUIDE.md  CURSOR_DEVELOPMENT_GUIDE.md  Clerk-StrikeEdge.txt  README.md  StrikeEdge_ChartInk_UI_Spec.md  StrikeEdge_Local_Testing_Guide_1.docx  StrikeEdge_Project_Tracker.xlsx  StrikeEdge_Project_Tracker_Updated.xlsx  StrikeEdge_Rollout_Checklist.xlsx  UIUX.docx  new 1.txt  render.yaml  vercel.json
backend/: .env.example  RESTART_INSTRUCTIONS.md  alembic.ini  pyproject.toml  requirements.txt  restart.ps1  run_dev.ps1
backend/alembic/: env.py
backend/app/: main.py  schemas.py
backend/migrations/: 000_schema_migrations.sql  001_init.sql  002_idempotency_records.sql  003_scan_jobs.sql  004_screener_scanresult_agentjob.sql  005_signal_events.sql  007_options_chain.sql  008_options_chain_metrics_columns.sql  009_watchlists_and_favorites.sql  010_notifications.sql  011_marketplace_strategies.sql  012_strike_candles.sql  013_strike_greeks.sql  014_oi_history.sql  015_users_and_preferences.sql
backend/scripts/: apply_migrations.py  backfill_strike_candles.py  cleanup_idempotency.py  run_notification_dispatcher.py  run_options_chain_scheduler.py  run_strike_greeks_batch.py  run_tick_scheduler.py  run_ws_ingest.py  sync_instruments.py
backend/tests/: test_agents.py  test_angel_auth_and_rate_limiter.py  test_app.py  test_auth_and_metrics.py  test_auth_user_journey.py  test_candle_fetcher_and_scanner.py  test_data_pipeline_and_cache.py  test_db_models_and_init.py  test_idempotency_cleanup.py  test_indicators.py  test_signals.py  (+14 more)
(+181 files in other folders)
