[project]
name = "strikeedge-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.31.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.4.0",
  "sqlalchemy>=2.0.35",
  "alembic>=1.14.0",
  "httpx>=0.28.0",
  "fyers-apiv3",
  "PyJWT[crypto]>=2.10.0",
  "redis>=5.0.0",
  "py_vollib",
  "websockets>=15.0.0",
  "pandas>=2.2.0",
  "beautifulsoup4>=4.12.0",
  "apscheduler>=3.10.0",
]
[project.optional-dependencies]
research = ["chromadb>=0.4.0"]


[tool.setuptools.packages.find]
include = ["app*"]
